# dynogrid

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml  skills-lock.json
notebooks/: vectorized_parameter_sweep.ipynb
src/dynogrid/: __init__.py  cli.py  config.py  engine.py  market_data.py  models.py  terminal_dashboard.py
src/dynogrid/exchange/: __init__.py  base.py  ccxt_binance.py  paper.py
src/dynogrid/persistence/: sqlite.py
src/dynogrid/research/: __init__.py  vector_backtest.py
src/dynogrid/strategy/: __init__.py  grid.py  indicators.py  reconcile.py
tests/: test_paper_exchange.py  test_persistence_and_cli.py  test_reconcile.py  test_research.py  test_strategy.py
tests/fixtures/: candles.csv
